[tool.poetry]
name = "Agromega"
version = "0.0.1"
description = ""
authors = ["Andrii Hots <gotsandriy@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.13"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.black]
line-length = 120
target-version = ['py38', 'py39', 'py310']
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | __pycached__
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
force_sort_within_sections = true

[tool.mypy]
plugins = ["mypy_django_plugin.main", "strawberry.ext.mypy_plugin"]
ignore_missing_imports = "True"

[tool.ruff]
line-length = 120
select = ["E", "F", "ERA", "I"]
ignore = [
    "TID252",
    "E501",  # line too long, handled by black
    "ERA001",  # Found commented-out code
]
fix = true

src = ["api", "in9", "lifestyle", "search", "world"]
