[project]
name = "agromega"
version = "0.0.1"
description = "AgroMega Django backend"
readme = "README.md"
requires-python = ">=3.14,<3.15"
authors = [
    { name = "Andrii Hots", email = "gotsandriy@gmail.com" },
]
dependencies = [
    "Django==6.0.6",
    "MarkupSafe==3.0.3",
    "Pillow==12.2.0",
    "boto3==1.43.6",
    "daphne==4.2.1",
    "django-autocomplete-light==4.0.0",
    "django-ckeditor==6.7.3",
    "django-comments-dab==3.0.0",
    "django-mptt==0.18.0",
    "django-oauth-toolkit==3.2.0",
    "django-phonenumber-field==8.4.0",
    "django-recaptcha==4.1.0",
    "django-rosetta==0.10.3",
    "django-silk==5.5.0",
    "django-storages==1.14.6",
    "django-taggit==6.1.0",
    "djangorestframework==3.17.1",
    "lxml==6.1.0",
    "openpyxl==3.1.5",
    "phonenumbers==9.0.30",
    "phonenumberslite==9.0.30",
    "psycopg[c]==3.3.4",
    "python-dateutil==2.9.0.post0",
    "python-jose==3.5.0",
    "requests==2.34.0",
    "selenium==4.43.0",
    "social-auth-app-django==5.9.0",
    "transliterate==1.10.2",
    "xlrd==2.0.2",
]

[dependency-groups]
dev = [
    "coverage==7.14.0",
    "factory-boy==3.3.3",
    "flake8==7.3.0",
]

[tool.uv]
package = false


[tool.black]
line-length = 120
target-version = ['py314']
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | __pycached__
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
force_sort_within_sections = true

[tool.mypy]
plugins = ["mypy_django_plugin.main", "strawberry.ext.mypy_plugin"]
ignore_missing_imports = "True"

[tool.ruff]
line-length = 120
fix = true
src = ["."]

[tool.ruff.lint]
select = ["E", "F", "ERA", "I"]
ignore = [
    "TID252",
    "E501",  # line too long, handled by black
    "ERA001",  # Found commented-out code
]
